feat: add strict pod security policy

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,3 +1,6 @@
 # Default values for isolation-templates.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+
+podSecurityPolicy:
+  enabled: false
